# Sugar

./: README.md
let_unless/: Cargo.toml
let_unless/src/: lib.rs
rust_sugar/: Cargo.toml  package-lock.json  rustc-ice-2024-08-02T23_45_58-475634.txt  rustc-ice-2024-08-02T23_45_58-475635.txt
rust_sugar/assets/: package-lock.json
rust_sugar/assets/sugar/: CHANGELOG.md  README.md  language-configuration.json  package.json  vsc-extension-quickstart.md
rust_sugar/assets/sugar/syntaxes/: sugar.tmLanguage.json
rust_sugar/src/: full_result.rs  lexer.rs  lib.rs  main.rs  option_result_utils.rs  parser.rs  parser_fn.rs  syntax.rs  term.rs  token.rs
rust_sugar/src/interpreter/: bin_op.rs  mod.rs  un_op.rs
rust_sugar/src/lexer/: mod.rs  token.rs  tokenize.rs
rust_sugar/src/parser/: accessors.rs  expr.rs  functions.rs  mod.rs  operators.rs  parser_error.rs  patterns.rs  stmt.rs  structs.rs  tokens.rs
rust_sugar/test/: expr.txt  final_test.sgr  function_test.sgr  main.sgr  parse.txt  player.sgr  test.sgr
sugar/: Cargo.toml
sugar/src/: lexer.rs
