[package]
name = "sugar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bumpalo = "3.16.0"
num = "0.4"
num-derive = "0.3"
num-traits = "0.2"
once_cell = "1.18.0"
stack_frame_allocators = "1.1.2"
text_io = "0.1.13"
unicode_escape = "0.1.0"
